--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
+
+mainClassName = "de.usu.usickaag.urltester.MainKt"
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation group: 'junit', name: 'junit', version: '4.12'
